# Kai-Engine

./: CMakeLists.txt  README.md  build-mac.sh  build-web.sh  build-win.bat
Assets/Scripts/: Enemy.py  Player.py  Script.py
Engine/: CMakeLists.txt
Engine/src/: Window.hpp  pch.hpp
Engine/src/Asset/: Asset.hpp  AssetManager.cpp  AssetManager.hpp  Texture.hpp
Engine/src/Camera/: Camera.hpp
Engine/src/Core/: Entry.cpp  Entry.hpp
Engine/src/ECS/: Entity.hpp
Engine/src/ECS/Components/: Component.hpp  Script.hpp  Transform.cpp  Transform.hpp
Engine/src/ECS/Systems/: ScriptSystem.hpp  System.hpp
Engine/src/Editor/: Editor.cpp  Editor.hpp
Engine/src/Math/: Math.hpp  Vec2.hpp
Engine/src/Scene/: EntryScene.hpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
Engine/src/Util/: Timer.hpp
Engine/src/Window/: Window.hpp
Game/: CMakeLists.txt
Game/src/: Game.cpp
Game/src/world/: World.cpp  World.hpp
Mac/libs/: libSDL3_image.0.2.0.dylib
Windows/includes/Pybind11/: pytypes.h
Windows/includes/Pybind11/detail/: common.h
Windows/libs/: box2d.lib  enet.lib
